# video-pool

./: .gitignore  README.md  pyproject.toml
app/: config.py  main.py  schemas.py
app/engine/: common.py  lightx2v_serve.py  router.py  scheduler.py  stub.py  wan.py
config/: settings.json
config/lightx2v/: wan21_i2v_480p_int8.json  wan21_t2v_1_3b_nvfp4.json
docs/: image-to-video-model-findings.md  runtime-admin-api.md
tests/: test_api.py  test_config.py  test_engine_lightx2v_serve.py  test_router.py
