[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video-pool"
version = "0.1.0"
description = "Local video generation pool service."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
]
wan = [
  "accelerate>=1.14,<2",
  "diffusers @ git+https://github.com/huggingface/diffusers.git@a50ade492678dd105f3df1b3d3e0df35c4e0740e",
  "imageio>=2.37,<3",
  "imageio-ffmpeg>=0.6,<1",
  "safetensors>=0.7,<1",
  "sentencepiece>=0.2,<0.3",
  "torch>=2.11,<2.12",
  "transformers>=5.10,<6",
]

[tool.setuptools.packages.find]
include = ["app*"]
